objects/Clienteling_App_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Height__c</fullName>
        <inlineHelpText>The height of the logo in px</inlineHelpText>
        <label>Logo Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_Resource_Name__c</fullName>
        <inlineHelpText>This is the name of the static resource you have uploaded for the app logo.</inlineHelpText>
        <label>Logo Resource Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Width__c</fullName>
        <inlineHelpText>The width of the logo in px</inlineHelpText>
        <label>Logo Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Performance_Dashboard_Id__c</fullName>
        <inlineHelpText>The unique ID of the wave dashboard. You can get a dashboard’s ID, an 18-character code beginning with 0FK, from the dashboard&apos;s URL.</inlineHelpText>
        <label>Performance Dashboard Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Clienteling App Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Clienteling App Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clienteling App Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>